# massphoto

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
assets/: unknown.clip
js/: App.svelte  ChangeOwner.svelte  ChangePassword.svelte  ConfirmModal.svelte  DeleteConfirm.svelte  ErrorMessage.svelte  FileSelectMenu.svelte  ImageView.svelte  MainMenu.svelte  ModalFrame.svelte  MoveConfirm.svelte  MoveDest.svelte  Nested.svelte  PasswordEntry.svelte  Thumbnail.svelte  TitleBarButton.svelte  Upload.svelte  UploadImage.svelte  UserAdd.svelte  UserList.svelte  UserLogin.svelte  UserLogout.svelte  VideoView.svelte  joinPath.js
js/MainMenu/: Element.svelte
public/: index.html
src/: cache.rs  db_utils.rs  files.rs  main.js  main.rs  session.rs  user.rs
src/files/: auth.rs  images.rs  load_cache.rs  scan_dir.rs
static/templates/: index.html
