[package]
name = "masaphoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-cors = "0.6.1"
anyhow = "1.0.51"
futures-util = "0.3.14"
image = "0.24.1"
path-slash = "0.1.4"
serde_json = "1.0.64"
rusqlite = { version = "0.27.0", features = ["bundled"] }
dunce = "1.0.2"
clap = { version = "3.1.6", features = ["derive"] }
sha-1 = "0.10.1"
serde = { version = "1.0.195", features = ["derive"] }
sha256 = "1.5.0"
